--- a/SocialForumAPI/appsettings.json
+++ b/SocialForumAPI/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Vorlesung_Dev;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "AppSettings": {
+    "Secret":  "Super geheimer und komplexer Secret!!!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
